<resources>
    <string name="app_name" translatable="false">MyPastry</string>

    <string name="login_activity_loginButton">Entrar</string>
    <string name="login_activity_registerButton">Registar</string>

    <string name="register_activity_mainTextView">Criar Conta</string>
    <string name="register_activity_registerButton">Registar</string>
    <string name="register_activity_RegisteredTextView">Já tem uma conta?</string>
    <string name="register_activity_loginButton">Entrar</string>

    <string name="email_confirmation_activity_mainTextView">Por favor, digite o código que enviamos para:</string>
    <string name="email_confirmation_activity_userEmail">example@yahoo.com</string>
    <string name="email_confirmation_activity_confirmButon">Confirmar</string>
    <string name="email_confirmation_activity_resendTextView">Não recebeu nenhum código?</string>
    <string name="email_confirmation_activity_resendButton">Reenviar</string>

    <string name="welcome_activity_welcomeTextView">Bem-Vindo!</string>
    <string name="welcome_activity_description">MyPastry App for mobile devices</string>
    <string name="welcome_activity_copyright">\u00a9 MyPastry</string>

    <string name="sign_in_activity_mainTextView">Bem vindo ao MyPastry</string>
    <string name="sign_in_activity_loginButton">Entrar</string>
    <string name="sign_in_activity_notRegisteredTextView">Ainda não tem uma conta?</string>
    <string name="sign_in_activity_registerButton">Registe-se</string>

    <string name="home_activity_points">89 pontos</string>
    <string name="home_activity_menus_button">Menus</string>
    <string name="home_activity_delicacies_button">Iguarias</string>
    <string name="home_activity_drinks_button">Bebidas</string>
    <string name="home_activity_dessert_button">Sobremesas</string>
    <string name="home_activity_conviniences_button">Convniência</string>
    <string name="home_activity_see_all_button">Ver tudo</string>
    <string name="home_activity_product_promo_1">Pastel de Calabresa</string>
    <string name="home_activity_product_promo_2">Menu Cachorro Quente</string>
    <string name="home_activity_home_button">Página inicial</string>
    <string name="home_activity_order_history_button">Histórico</string>
    <string name="home_activity_order_button">Pedido</string>
    <string name="home_activity_account_button">Conta</string>

    <string name="primary_activity_title">Principal</string>

    <string name="delicacy_activity_title">Iguarias</string>

    <string name="bever_activity_title">Bebidas</string>

    <string name="dessert_activity_title">Sobremesas</string>

    <string name="convenience_activity_title">Conveniências</string>

    <string name="see_all_activity_title">Todos</string>


    <string name="product_title_hint">Nome do produto</string>
    <string name="product_description_hint">Descrição do produto</string>
    <string name="product_price_hint">0.00</string>

    <string name="product_details_activity_select_textView">Selecione a quantidade:</string>
    <string name="product_details_activity_required_textView">Obrigatório</string>
    <string name="product_details_activity_add_product_button">Adicionar ao pedido - </string>

    <string name="order_activity_title">Pedido</string>
    <string name="order_activity_total_textView">Total</string>
    <string name="order_activity_check_out_button">Finalizar</string>
    <string name="order_activity_add_products_button">Adicionar artigos</string>
    <string name="order_activity_empty_view">Adicione produtos ao seu pedido.</string>

    <string name="historic_activity_title">Histórico</string>

    <string name="checkout_activity_title">CheckOut</string>
    <string name="checkout_activity_select_textView">Selecione uma opção:</string>
    <string name="checkout_activity_required_textView">Obrigatório</string>
    <string name="checkout_activity_delivery_title">Pedido Delivery</string>
    <string name="checkout_activity_delivery_description">Selecione o local de entrega.</string>
    <string name="checkout_activity_mobile_title">Pedido Mobile</string>
    <string name="checkout_activity_mobile_description">Levante no balcão.</string>
    <string name="checkout_activity_subtotal_textView">Subtotal</string>
    <string name="checkout_activity_service_textView">Serviço</string>
    <string name="checkout_activity_delivery_textView">Entrega</string>
    <string name="checkout_activity_total_textView">Total</string>
    <string name="checkout_activity_defaultValue">0.00 €</string>


    <string name="admin_portrait_activities_instruction">Por favor, incline o seu dispositivo.</string>

    <string name="admin_home_activity_title">Cozinha | Pedidos</string>

    <string name="admin_settings_activity_title">Definições</string>
    <string name="admin_settings_activity_header">Como pretende ver os seus pedidos?</string>
    <string name="admin_settings_activity_orders_filtered_button_title">Ver pedidos por estado</string>
    <string name="admin_settings_activity_orders_filtered_button_description">Faça a gestão de pedidos através do seu restaurante.
        \nPara transposição de pedidos e volumes maiores.</string>
    <string name="admin_settings_activity_orders_button_title">Ver todos os pedidos</string>
    <string name="admin_settings_activity_orders_button_description">Todos os pedidos numa vista deslocável.
        \nPara uma visão geral e rápida dos seus pedidos MyPastry.</string>
    <string name="admin_settings_activity_company_info_button">Informação da Empresa</string>
    <string name="admin_settings_activity_order_reciepts_button">Impressão do recibo</string>
    <string name="admin_settings_activity_software_license_button">Licensas de software</string>


    <string name="log_out_button">Terminar sessão</string>

    <string name="eur_symbol">€</string>

    <string name="privacyPolicyTextView">Ao clicar no botão, você concorda com os nossos Termos de Serviço e Política de Privacidade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>