<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailConfirmationActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="372dp"
        android:layout_height="72dp"
        android:layout_marginTop="150dp"
        android:text="@string/email_confirmation_activity_mainTextView"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_confirm_textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:hint="@string/email_confirmation_activity_userEmail"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_confirm_textInput_pin"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/baseline_locked_icon_24"
        android:drawablePadding="20dp"
        android:drawableTint="#2C2C32"
        android:hint="Código"
        android:includeFontPadding="true"
        android:inputType="number"
        android:paddingHorizontal="16dp"
        android:textAlignment="inherit"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/email_confirm_textView_email"
        app:layout_constraintStart_toStartOf="@+id/email_confirm_textView_email"
        app:layout_constraintTop_toBottomOf="@+id/email_confirm_textView_email" />

    <Button
        android:id="@+id/email_confirm_button_confirm"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/costum_button"
        android:onClick="confirmEmail"
        android:text="@string/email_confirmation_activity_confirmButon"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/button_color_green"
        app:layout_constraintEnd_toEndOf="@+id/email_confirm_textInput_pin"
        app:layout_constraintStart_toStartOf="@+id/email_confirm_textInput_pin"
        app:layout_constraintTop_toBottomOf="@+id/email_confirm_textInput_pin" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/email_confirmation_activity_resendTextView"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/email_confirm_button_confirm"
        app:layout_constraintTop_toBottomOf="@+id/email_confirm_button_confirm" />

    <Button
        android:id="@+id/email_confirm_button_resend"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/costum_button"
        android:onClick="reSendPin"
        android:text="@string/email_confirmation_activity_resendButton"
        android:textStyle="bold"
        android:textSize="15sp"
        app:backgroundTint="@color/button_color_grey"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />
</androidx.constraintlayout.widget.ConstraintLayout>