<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sign_in_activity_mainTextView"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <View
        android:id="@+id/divider"
        android:layout_width="280dp"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/facebook_icon" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/imageButton2"
        app:srcCompat="@drawable/google_icon" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/sign_in_textInput_email"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/baseline_message_icon_24"
        android:drawablePadding="20dp"
        android:drawableTint="#2C2C32"
        android:hint="Email"
        android:includeFontPadding="true"
        android:inputType="text|textEmailAddress"
        android:paddingHorizontal="16dp"
        android:textAlignment="inherit"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <EditText
        android:id="@+id/sign_in_textInput_password"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/baseline_locked_icon_24"
        android:drawablePadding="20dp"
        android:drawableTint="#2C2C32"
        android:ems="10"
        android:hint="Password"
        android:includeFontPadding="true"
        android:inputType="text|textPassword"
        android:lineHeight="5dp"
        android:paddingHorizontal="16dp"
        android:textAlignment="inherit"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_textInput_email"
        app:layout_constraintStart_toStartOf="@+id/sign_in_textInput_email"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_textInput_email" />

    <Button
        android:id="@+id/sign_in_button_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/costum_button"
        android:onClick="signIn"
        android:text="@string/sign_in_activity_loginButton"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/button_color_green"
        app:layout_constraintEnd_toEndOf="@+id/register_privacy_policy"
        app:layout_constraintStart_toStartOf="@+id/register_privacy_policy"
        app:layout_constraintTop_toBottomOf="@+id/register_privacy_policy" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="175dp"
        android:layout_height="160dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/register_privacy_policy"
        android:layout_width="351dp"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:text="@string/privacyPolicyTextView"
        android:textAlignment="center"
        android:textColor="#b6b6b8"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_textInput_password"
        app:layout_constraintStart_toStartOf="@+id/sign_in_textInput_password"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_textInput_password" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/sign_in_activity_notRegisteredTextView"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_button_login"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button_login" />

    <Button
        android:id="@+id/sign_in_button_register"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/costum_button"
        android:onClick="callRegisterActivity"
        android:text="@string/sign_in_activity_registerButton"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@color/button_color_red"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>